# ai-agent-task-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.http
.github/workflows/: ci.yml
app/agent/: __init__.py  executor_node.py  planner_node.py  reflection_node.py  state.py  workflow.py
app/api/: __init__.py  deps.py  errors.py  router.py
app/api/v1/: agent.py  knowledge.py  tasks.py
app/config/: __init__.py  database.py  logging.py  settings.py
app/llm/: __init__.py  base.py  embeddings.py  factory.py  zhipu_provider.py
app/memory/: __init__.py  base.py  factory.py  long_term.py  short_term.py
app/models/: __init__.py  api_schemas.py  plan.py  task.py
app/prompts/: __init__.py  executor.py  manager.py  planner.py  reflection.py
app/rag/: __init__.py  base.py  indexer.py  loader.py  retriever.py  service.py  splitter.py  vector_store.py
app/services/: __init__.py  agent_service.py  task_service.py
app/tools/: __init__.py  base.py  builtins.py  file_processing.py  rag_tool.py  registry.py  sql_query.py  web_search.py
scripts/: check.py
tests/: conftest.py  test_agent.py  test_api.py  test_integration.py  test_llm.py  test_memory.py  test_rag.py  test_tools.py
